tests/NormalTests/paczka1/fuzzy1/93835876.err
Error in line 1: vDWPKGd1R A579 57,2
Error in line 9: UI6JNooOSZU S569 -3,3
Error in line 4: UI6JNooOSZU S569 91,0
Error in line 10: UI6JNooOSZU S945 24,5
Error in line 13: 7bM76FQ A579 72,2
Error in line 14: rL7Z1 A579 9,8
Error in line 11: UI6JNooOSZU S569 213,5
Error in line 28: yfBT S945 47,4
